# tararchiever-rb

./: CODE_OF_CONDUCT.md  Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  YAPULAN  tararchiever.gemspec
lib/: tararchiever.rb
lib/tararchiever/: version.rb
src/: error.rs  lib.rs  ruby_binding.rs
test/: tararchiever_test.rb  test_helper.rb
