[package]
name = "tar_archiever"
version = "0.1.0"
authors = ["Emrecan Şuşter <emrecansuster@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rutie = {version = "0.8.2", features = ["no-link"]}
flate2 = "*"
tar = "*"
zstd = "*"
lz4 = "1.23.1"
xz2 = "0.1"

[lib]
name = "tar_archiever" 
crate-type = ["cdylib"]
